tests/machine/x/pascal/in_operator_extended.error
line: 48
error: fpc error: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/machine/x/pascal/in_operator_extended.pas
in_operator_extended.pas(37,47) Error: Incompatible type for arg no. 1: Got "TArray$1$crc9F312717", expected "TArray$1$crcE41905E8"
in_operator_extended.pas(38,47) Error: Incompatible type for arg no. 1: Got "TArray$1$crc9F312717", expected "TArray$1$crcE41905E8"
in_operator_extended.pas(45,18) Error: Operator is not overloaded
in_operator_extended.pas(46,18) Error: Operator is not overloaded
in_operator_extended.pas(48) Fatal: There were 4 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode

